fixed header spacing issue

--- a/social-media-app/src/Header.module.css
+++ b/social-media-app/src/Header.module.css
@@ -5,6 +5,7 @@
 
     box-sizing: border-box;
     position: fixed;
+    top: 0;
     width:100%;
     height: 44px;
     padding:0px 18px;
